[package]
name = "rust"
version = "0.1.0"
authors = ["kliu <kuan.liu@handpay.com.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.53"
serde =  { version = "1.0.111", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
oracle = { version = "0.3.0", features = ["chrono"] }
mysql = "*"